# side-stacker

./: .dockerignore  .gitignore  Dockerfile  README.md
alphazero/: AlphaZero_Training.ipynb  MCTS.ipynb  README.md  SideStacker.py  notes.md  pyproject.toml
alphazero/models/: model_0.pt  model_1.pt  model_10.pt  model_11.pt  model_12.pt  model_13.pt  model_14.pt  model_15.pt  model_16.pt  model_17.pt  model_18.pt  model_19.pt  model_2.pt  model_20.pt  model_21.pt  model_22.pt  model_23.pt  model_24.pt  model_25.pt  model_26.pt  model_27.pt  model_3.pt  model_4.pt  model_5.pt  model_6.pt  model_7.pt  model_8.pt  model_9.pt  optimizer_0.pt  optimizer_1.pt  optimizer_10.pt  optimizer_11.pt  optimizer_12.pt  optimizer_13.pt  optimizer_14.pt  optimizer_15.pt  optimizer_16.pt  optimizer_17.pt  optimizer_18.pt  optimizer_19.pt  (+16 more)
alphazero/utils/: __init__.py  chart_utils.py
backend/: .dockerignore  .gitignore  Dockerfile  README.md  compose.local.yaml  compose.yaml  db.sqlite  deploy.sh  model.pt  pyproject.toml  sample.env
backend/alphazero/: AlphaZero.py  Node.py  SideStacker.py  __init__.py  alphazero_bot.py  bot.py  engine.py
backend/alphazero_engine/: AlphaZero.py  ResNet.py  engine.py
backend/app/: auth.py  constants.py  db.py  game.py  game_models.py  main.py  models.py  user_models.py
backend/app/auth/: __init__.py  auth.py  tokens.py  user.py
backend/app/game/: __init__.py  game.py
backend/game_engine/: __init__.py
backend/mcts/: __init__.py  engine.py  mcts_bot.py
backend/mcts_engine/: __init__.py  mcts.py
backend/sidestacker/: __init__.py  sidestacker.py
backend/tests/: fruitname_test.py
backend/utils/: __init__.py  fruits.py  names.py  utils.py
frontend/: next.config.ts  package-lock.json  package.json  sample.env  vite.config.ts
frontend-vite/: package-lock.json  package.json  vite.config.ts
frontend-vite/src/: App.tsx
frontend/src/: App.tsx  constants.ts  gameEngine.ts  gameLogic.ts  types.ts  utils.ts  utils.tsx
frontend/src/__test__/: gamelogic.test.ts
frontend/src/app/: constants.ts  globals.css  layout.tsx  page.tsx  types.ts
frontend/src/app/components/: Controls.tsx  OnlineUsers.tsx  Toggle.tsx
frontend/src/app/game/: gameEngine.ts
frontend/src/app/side-stacker/: page.tsx  utils.ts
frontend/src/app/side-stacker/components/: Difficulty.tsx  PlayingBoard.tsx  WinnerIndicator.tsx
frontend/src/app/side-stacker/game/: gameLogic.ts  gameUtils.ts
frontend/src/components/: Controls.tsx  Footer.tsx  Greeting.tsx  OnlineUsers.tsx  PlayingBoard.tsx  Textfade.tsx  Title.tsx  TurnIndicator.tsx  WinnerIndicator.tsx
frontend/src/game/: gameEngine.ts  gameLogic.ts
frontend/src/icons/: FileIcon.tsx  GlobeIcon.tsx  WindowIcon.tsx
