[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.8"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "numpy>=2.2.4",
    "pyjwt[crypto]>=2.10.1",
    "python-dotenv>=1.0.1",
    "sqlmodel>=0.0.24",
    "torch>=2.6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.9.9",
    "taskipy>=1.14.1",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
include = ["pyproject.toml", "app/**/*.py", "tests/**/*.py", "utils/**/*.py"]

[tool.taskipy.tasks]
start = "uv run uvicorn app.main:app"
dev = "uv run uvicorn app.main:app --reload"
lint = "uv run ruff check"
test = "uv run pytest -q"
test_debug = "uv run pytest -s"

docker_build = "docker build -t backend:latest ."
docker_save = "docker save backend:latest -o backend.tar"
docker_upload = "scp -i us-east-1-macbook-air.pem backend.tar ubuntu@ec2-44-203-125-172.compute-1.amazonaws.com:/home/ubuntu/"
docker_load_remote = "ssh -i us-east-1-macbook-air.pem ubuntu@ec2-44-203-125-172.compute-1.amazonaws.com 'docker load -i backend.tar && docker images'"

docker_down_remote = "ssh -i us-east-1-macbook-air.pem ubuntu@ec2-44-203-125-172.compute-1.amazonaws.com 'docker compose down || true'"
docker_delete_image_remote = "ssh -i us-east-1-macbook-air.pem ubuntu@ec2-44-203-125-172.compute-1.amazonaws.com 'docker rmi backend:latest || true'"
docker_up_remote = "ssh -i us-east-1-macbook-air.pem ubuntu@ec2-44-203-125-172.compute-1.amazonaws.com 'docker compose up -d'"

docker_deploy = "task docker_build && task docker_save && task docker_upload && task docker_load_remote && task docker_down_remote && task docker_delete_image_remote && task docker_up_remote"